# prueba_arqui_fer

.devcontainer/: devcontainer.json
aos/: CMakeLists.txt
aos/include/: aos_camera.hpp  aos_image.hpp  aos_ray.hpp  aos_vector.hpp
aos/src/: aos_camera.cpp  aos_image.cpp  aos_ray.cpp  aos_vector.cpp  main.cpp
archivos_ejemplo/: config.cfg  config_errors.txt  config_valid.txt  escena.txt  scene_errors.txt  scene_valid.txt
common/: CMakeLists.txt
common/include/: config.hpp  config_parser.hpp  geometry_logic.hpp  hit_record.hpp  hittable.hpp  material_base.hpp  material_logic.hpp  materials.hpp  math_utilities.hpp  object_base.hpp  objects.hpp  parser_utilities.hpp  ray.hpp  scene_parser.hpp  vector.hpp
common/src/: config_parser.cpp  geometry_logic.cpp  hittable.cpp  material_logic.cpp  math_utilities.cpp  parser_utilities.cpp  parser_utils.cpp  scene_parser.cpp  test_parser.cpp  vector.cpp
soa/: CMakeLists.txt
soa/include/: render_soa.hpp  soa_camera.hpp  soa_color.hpp  soa_image.hpp  soa_ray.hpp
soa/src/: render_soa.cpp  soa_camera.cpp  soa_color.cpp  soa_image.cpp  soa_ray.cpp
